--- a/games.owned.html
+++ b/games.owned.html
@@ -189,6 +189,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Cloudberry Kingdom
 [V] Code: Realize ~Guardian of Rebirth~
 [4V] Color Guardians
+[4] Conan Exiles
 [4] Contrast
 [3] Costume Quest 2
 [43V] CounterSpy
@@ -462,7 +463,8 @@ Resident Evil: Chronicles HD Collection
 [V] Super Mutant Alien Assault
 [3] Super Stardust HD
 [3] Super Street Fighter IV: Arcade Edition
-[4V] Super Time Force Ultra
+[4V] Super Time Force Ultr
+[4] The Surge
 [V] Surge Deluxe
 [43V] The Swapper
 [43V] The Swindle
