--- a/games.owned.html
+++ b/games.owned.html
@@ -463,7 +463,7 @@ Resident Evil: Chronicles HD Collection
 [V] Super Mutant Alien Assault
 [3] Super Stardust HD
 [3] Super Street Fighter IV: Arcade Edition
-[4V] Super Time Force Ultr
+[4V] Super Time Force Ultra
 [4] The Surge
 [V] Surge Deluxe
 [43V] The Swapper
