--- a/games.owned.html
+++ b/games.owned.html
@@ -435,6 +435,7 @@ Resident Evil: Chronicles HD Collection
 [3] Snakeball
 [4] Soma
 [V] Sonic & All-Stars Racing Transformed
+[4] Sonic Mania
 [V] Soul Sacrifice
 [V] Space Hulk
 [V] Space Overlords
