--- a/games.owned.html
+++ b/games.owned.html
@@ -91,6 +91,9 @@ Metal Gear Solid HD Collection $9
 [2] Persona 3 FES $5
 [P] Persona 3 Portable $5
 [V] Persona 4 Golden $9
+P3D & P5D Bundle $46
+ [V] Persona 3: Dancing in Moonlight
+ [V] Persona 5: Dancing in Starlight
 [4] Plants vs. Zombies: Garden Warfare
 Prince of Persia Trilogy $8
  [3] Prince of Persia: The Sands of Time
