--- a/games.owned.html
+++ b/games.owned.html
@@ -210,6 +210,8 @@ Uncharted: The Nathan Drake Collection $8
 [3] Dead Space 3
 [3] Demon's Souls
 [4] Destiny 2
+[4] Detroit: Become Human
+ [4] Heavy Rain
 [3] Deus Ex: Human Revolution
 [4] Deus Ex: Mankind Divided
 [3] Dirt 3
@@ -286,6 +288,7 @@ Hitman HD Trilogy
 [4] Hitman: The Complete First Season
 [3] Hoard
 [43V] Hohokum
+[4] Horizon Chase Turbo
 [4V] Hue
 [V] The Hungry Horde
 [3] Hustle Kings
