--- a/games.owned.html
+++ b/games.owned.html
@@ -439,6 +439,7 @@ Resident Evil: Chronicles HD Collection
 [3] Sleeping Dogs
 [V] Smart As...
 [3] Snakeball
+[4] Sniper Elite 4
 [4] Soma
 [V] Sonic & All-Stars Racing Transformed
 [4] Sonic Mania
@@ -520,6 +521,7 @@ Resident Evil: Chronicles HD Collection
 [V] Wanted Corp.
 [4V] We Are Doomed
 [V] Wipeout 2048
+[4] Wipeout Omega Collection
 [4] The Witness
 [4V] Woah Dave!
 [4] Worms Battlegrounds
