--- a/games.owned.html
+++ b/games.owned.html
@@ -200,6 +200,7 @@ Uncharted: The Nathan Drake Collection $8
 [4V] Curses ’n Chaos
 [3] Darksiders
 [4] Darksiders II
+[4] Darksiders III
 [3] Darkstalkers Resurrection
 [3] Datura
 [4V] Day of the Tentacle Remastered
