+ MLB The Show 19

--- a/games.owned.html
+++ b/games.owned.html
@@ -356,6 +356,7 @@ Mega Man 9 & 10 Combo Pack
 [4] Metal Gear Solid V: The Phantom Pain
 [V] Metrico
 [43] Mighty No. 9
+[4] MLB The Show 19
 [V] ModNation Racers: Road Trip
 [V] MonsterBag
 [3] Monster Jam Battlegrounds
