--- a/games.owned.html
+++ b/games.owned.html
@@ -90,6 +90,7 @@ Metal Gear Solid HD Collection $9
 [1] Persona 2: Eternal Punishment $4
 [2] Persona 3 FES $5
 [P] Persona 3 Portable $5
+[V] Persona 4: Dancing All Night $13
 [V] Persona 4 Golden $9
 P3D & P5D Bundle $46
  [V] Persona 3: Dancing in Moonlight
@@ -359,6 +360,7 @@ Mega Man 9 & 10 Combo Pack
 [4] MLB The Show 19
 [V] ModNation Racers: Road Trip
 [V] MonsterBag
+[V] Monster Energy Supercross
 [3] Monster Jam Battlegrounds
 [43V] MouseCraft
 [3] Mugen Souls Z
@@ -487,6 +489,7 @@ Resident Evil: Chronicles HD Collection
 [3] Thief
 [4] This War of Mine: The Little Ones
 [43V] Titan Attacks!
+[4] Titanfall 2
 [4V] Titan Souls
 [43V] Tiny Troopers: Joint Ops
 [3] Tomb Raider
