--- a/games.played.html
+++ b/games.played.html
@@ -12,6 +12,9 @@
 <body id="played">
 
 <div><pre>
+<b>2020</b>
+<b>2019</b>
+[Vita] Persona 5: Dancing in Starlight
 <b>2018</b>
 [iOS] Florence
 [PS4] _RiME_
