--- a/games.owned.html
+++ b/games.owned.html
@@ -433,10 +433,12 @@ Resident Evil: Chronicles HD Collection
 [4] Secret Ponchos
 [3] Serious Sam 3 BFE
 [V] Severed
+[4] Shadow of the Colossus
 [3] Sherlock Holmes: Crimes & Punishments
 [4V] Shutshimi
 [V] Sine Mora
 [3] Siren: Blood Curse
+[4] Sonic Forces
 [3] Skullgirls Encore
 [4] Skulls of the Shogun
 [43V] Sky Force Anniversary
