--- a/games.owned.html
+++ b/games.owned.html
@@ -217,6 +217,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Deus Ex: Human Revolution
 [4] Deus Ex: Mankind Divided
 [3] Dirt 3
+[4] Dirt Rally 2.0
 [4] Disc Jam
 [3] Dishonored
 [3V] Divekick
@@ -512,6 +513,7 @@ Resident Evil: Chronicles HD Collection
 [43V] Ultratron
 [4V] Uncanny Valley
 [V] Uncharted: Golden Abyss
+[4] Uncharted 4: A Thief's End
 [3] Under Night In-Birth Exe:Late
 [V] Unit 13
 [43] Unmechanical: Extended
