--- a/games.owned.html
+++ b/games.owned.html
@@ -123,6 +123,7 @@ Prince of Persia Trilogy $8
 [43V] Thomas Was Alone $3
 [V] Three Fourths Home $2
 [3] Tokyo Jungle $1
+[4] Tom Clancy's The Division 2 $3
 Uncharted: The Nathan Drake Collection $8
  [4] Uncharted: Drake's Fortune
  [4] Uncharted 2: Among Thieves
