--- a/voxns/index.html
+++ b/voxns/index.html
@@ -16,8 +16,7 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <!--<link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">-->
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.css" rel="stylesheet">
@@ -29,8 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><span>VOX Network Solutions</span> <img class="cisco" src="img/cisco-powered-custom.png"></a>
-      <a class="btn btn-primary round" href="#"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;123.456.7890</a>
+      <div class="navbar-brand"><span>VOX Network Solutions</span> <img class="cisco" src="img/cisco-powered-custom.png"></div>
+      <a class="btn btn-primary round" href="tel:123-456-7890"><i class="fas fa-phone-alt"></i> 123.456.7890</a>
     </div>
   </nav>
 
@@ -39,6 +38,8 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
+        <div class="video-container"><iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe></div>
+        <!--
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
         </div>
@@ -54,6 +55,7 @@
             </div>
           </form>
         </div>
+        -->
       </div>
     </div>
   </header>
@@ -197,23 +199,23 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; 2020 VOX Network Solutions. All rights reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              <a href="https://www.youtube.com/user/voxns">
+                <i class="fab fa-youtube fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+              <a href="https://twitter.com/voxns">
+                <i class="fab fa-twitter fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              <a href="https://www.linkedin.com/company/vox-network-solutions">
+                <i class="fab fa-linkedin fa-2x fa-fw"></i>
               </a>
             </li>
           </ul>
