--- a/voxns/index.html
+++ b/voxns/index.html
@@ -16,7 +16,7 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <!--<link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">-->
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.css" rel="stylesheet">
@@ -34,7 +34,7 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead text-white text-center">
+  <header class="text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
