header and masthead

--- a/voxns/index.html
+++ b/voxns/index.html
@@ -28,21 +28,19 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light static-top">
     <div class="container">
-      <div class="navbar-brand"><span>VOX Network Solutions</span> <img class="cisco" src="img/cisco-powered-custom.png"></div>
+      <div class="navbar-brand">VOX Network Solutions</div>
       <a class="btn btn-primary round" href="tel:123-456-7890"><i class="fas fa-phone-alt"></i> 123.456.7890</a>
     </div>
   </nav>
 
   <!-- Masthead -->
-  <header class="text-center">
+  <header class="masthead text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="video-container"><iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe></div>
-        <!--
-        <div class="col-xl-9 mx-auto">
+        <!--<div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
-        </div>
+        </div>-->
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
@@ -55,7 +53,15 @@
             </div>
           </form>
         </div>
-        -->
+      </div>
+    </div>
+  </header>
+
+  <header class="text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="video-container"><iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe></div>
       </div>
     </div>
   </header>
