--- a/voxns/index.html
+++ b/voxns/index.html
@@ -39,11 +39,11 @@
     <div class="container">
       <div class="row">
         <div class="col-8">
-          <img src="img/cisco-partner.png" alt="Cisco Partner" width="130" height="130">
+          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="130" height="130">
           <h1 class="mt-2 mb-3">Webex Calling with&nbsp;VOX</h1>
-          <p class="lead">Webex Calling is your complete phone system and collaboration solution in the Cloud!</p>
-          <p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can trust.</p>
-          <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own pace.</p>
+          <p class="lead">Webex Calling is your complete phone system and collaboration solution in the&nbsp;Cloud!</p>
+          <p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can&nbsp;trust.</p>
+          <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own&nbsp;pace.</p>
         </div>
         <!--
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
