--- a/voxns/index.html
+++ b/voxns/index.html
@@ -38,7 +38,7 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-8">
+        <div class="col-lg-6 col-md-8 col-sm-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="130" height="130">
           <h1 class="mt-2 mb-3">Webex Calling with&nbsp;VOX</h1>
           <p class="lead">Webex Calling is your complete phone system and collaboration solution in the&nbsp;Cloud!</p>
@@ -154,25 +154,11 @@
     <div class="container">
       <h2 class="mb-5">What customers say about us&#8230;</h2>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-12">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">&#8220;Vox helped us&#8230;&#8221;</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">&#8220;Vox helped us&#8230;&#8221;</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">&#8220;Vox helped us&#8230;&#8221;</p>
+            <!--<img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">-->
+            <h5>Ian Gwinn, UCSF</h5>
+            <p class="font-weight-light mb-0">“Cindy from Vox Networks spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge at UCSF… Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the&nbsp;future.”</p>
           </div>
         </div>
       </div>
