--- a/voxns/index.html
+++ b/voxns/index.html
@@ -35,44 +35,29 @@
 
   <!-- Masthead -->
   <header class="masthead text-white">
-    <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-8 col-sm-12">
-          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="130" height="130">
+        <div class="col-md-8 col-sm-12">
+          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="120" height="120">
           <h1 class="mt-2 mb-3">Webex Calling with&nbsp;VOX</h1>
           <p class="lead">Webex Calling is your complete phone system and collaboration solution in the&nbsp;Cloud!</p>
           <p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can&nbsp;trust.</p>
           <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own&nbsp;pace.</p>
         </div>
-        <!--
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
-        </div>
-        -->
       </div>
     </div>
   </header>
 
-  <header class="text-center">
-    <div class="overlay"></div>
+  <section class="text-white">
     <div class="container">
-      <div class="row">
+      <div class="row" style="padding:0 15px">
         <div class="video-container"><iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe></div>
       </div>
     </div>
-  </header>
+  </section>
 
   <!-- Icons Grid -->
+  <!--
   <section class="features-icons bg-light text-center">
     <div class="container">
       <div class="row">
@@ -106,6 +91,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- Image Showcases -->
   <section class="showcase">
