--- a/voxns/index.html
+++ b/voxns/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="120" height="120">
-          <h1 class="mt-2 mb-3">Webex Calling with&nbsp;VOX</h1>
+          <h1 class="mt-2 mb-3">Webex Calling with&nbsp;Vox</h1>
           <p class="lead">Webex Calling is your complete phone system and collaboration solution in the&nbsp;Cloud!</p>
           <p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can&nbsp;trust.</p>
           <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own&nbsp;pace.</p>
@@ -48,7 +48,7 @@
     </div>
   </header>
 
-  <section class="text-white">
+  <section class="blue text-white">
     <div class="container">
       <div class="row" style="padding:0 15px">
         <div class="video-container"><iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe></div>
@@ -56,48 +56,10 @@
     </div>
   </section>
 
-  <!-- Icons Grid -->
-  <!--
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
-            </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
-            </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
-            </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
-
   <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Unified experience that is location independent</h2>
@@ -135,6 +97,55 @@
     </div>
   </section>
 
+  <section class="blue text-white" style="padding: 7rem 1rem">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-12">
+          <h1>Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the cloud</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="hr"><span>Why Vox?</span></h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-refresh m-auto text-primary"></i>
+            </div>
+            <h3>Unique consultative approach</h3>
+            <p class="lead mb-0">We use Vox Lifecycle, our proprietary consultative framework, to find the right technology fit for your unique business needs and desired outcomes</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-pie-chart m-auto text-primary"></i>
+            </div>
+            <h3>Focused on your business’s evolution</h3>
+            <p class="lead mb-0">We audit your business and technology requirements to help you plan for future growth and evolution, ensuring that your Webex Calling with Vox investment can expand and adapt as your company grows and changes</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-emotsmile m-auto text-primary"></i>
+            </div>
+            <h3>Happy employees and customers</h3>
+            <p class="lead mb-0">People love working for us! Happy employees translates into superior customer service and happy customers</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
@@ -153,7 +164,6 @@
 
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
-    <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
@@ -180,6 +190,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+          <!--
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
               <a href="#">About</a>
@@ -197,6 +208,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
+          -->
           <p class="text-muted small mb-4 mb-lg-0">&copy; 2020 VOX Network Solutions. All rights reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
