--- a/voxns/index.html
+++ b/voxns/index.html
@@ -101,7 +101,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h1>Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the cloud</h1>
+          <h2>Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h2>
         </div>
       </div>
     </div>
@@ -146,6 +146,20 @@
     </div>
   </section>
 
+  <section class="blue text-white" style="padding: 7rem 1rem">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-12">
+          <h2 class="mb-3"><span class="o7">Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered.</h2>
+          <p class="lead">We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
+          <p class="lead">Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
+          <p class="lead">Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), as well as to third-party PBX legacy systems.</p>
+          <p class="mt-4"><button type="submit" class="btn btn-block btn-lg btn-light">Talk to an expert today!</button></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
@@ -166,17 +180,12 @@
   <section class="call-to-action text-white text-center">
     <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+        <div class="col-8 mx-auto">
+          <h2 class="mb-4">Let Vox deliver the right cloud calling and collaboration platform tailored to your business needs</h2>
           <form>
             <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+              <div class="col-12">
+                <button type="submit" class="btn btn-block btn-lg btn-light">Talk to an expert today!</button>
               </div>
             </div>
           </form>
