--- a/voxns/index.html
+++ b/voxns/index.html
@@ -56,97 +56,93 @@
     </div>
   </section>
 
-  <!-- Image Showcases -->
-  <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Unified experience that is location independent</h2>
-          <p class="lead mb-0">The integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners, and customers regardless of how they connect and what devices they are using.</p>
+  <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="hr"><span>Webex Cloud Calling</span></h1>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Easy IT management</h2>
-          <p class="lead mb-0">All collaboration and calling services are integrated via the cloud, which makes administration, lifecycle management and security easier through simple web portals.</p>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-globe m-auto text-primary"></i>
+            </div>
+            <h4>Unified Experience</h4>
+            <p class="mb-0">Seamless, unified calling and collaboration experience for all your users across all devices and locations</p>
+          </div>
         </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Security</h2>
-          <p class="lead mb-0">Secure calling and sharing with end-to-end encryption is backed by Cisco’s high security standards.</p>
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-cloud-upload m-auto text-primary"></i>
+            </div>
+            <h4>Easy Management</h4>
+            <p class="mb-0">Easy to administer due to easy, centralized management in the cloud</p>
+          </div>
         </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Collaboration tools</h2>
-          <p class="lead mb-0">Webex Meetings and Webex Teams are included with Webex Calling! Let your workforce use these tools on their desktop or mobile devices to be more productive, from anywhere. </p>
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-wallet m-auto text-primary"></i>
+            </div>
+            <h4>Cost-Efficiency</h4>
+            <p class="mb-0">Cost-efficiency due to reduced total cost of ownership (TCO) and simple monthly per-user pricing that minimizes capital investment and supports scalability</p>
+          </div>
         </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Flexible Cloud migration plan</h2>
-          <p class="lead mb-0">Flexible cloud, mixed cloud and on-premises deployment options and transition pathways are available, enabling you to transition to the cloud at a pace that is right for your business.</p>
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-lock m-auto text-primary"></i>
+            </div>
+            <h4>Highly Secure</h4>
+            <p class="mb-0">Backed by the high security standards of Cisco, a globally trusted brand</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="blue text-white" style="padding: 7rem 1rem">
+  <section class="blue text-white text-center" style="background: #343a40 url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 7rem 1rem">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-sm-12">
+        <div class="col-md-8 col-sm-12 mx-auto">
           <h2>Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h2>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="hr"><span>Why Vox?</span></h1>
+  <!-- Image Showcases -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Unique consultative approach</h2>
+          <p class="lead mb-0">We use Vox Lifecycle, our proprietary consultative framework, to find the right technology fit for your unique business needs and desired outcomes.</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-refresh m-auto text-primary"></i>
-            </div>
-            <h3>Unique consultative approach</h3>
-            <p class="lead mb-0">We use Vox Lifecycle, our proprietary consultative framework, to find the right technology fit for your unique business needs and desired outcomes</p>
-          </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Focused on your business’s evolution</h2>
+          <p class="lead mb-0">We audit your business and technology requirements to help you plan for future growth and evolution, ensuring that your Webex Calling with Vox investment can expand and adapt as your company grows and changes.</p>
         </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-pie-chart m-auto text-primary"></i>
-            </div>
-            <h3>Focused on your business’s evolution</h3>
-            <p class="lead mb-0">We audit your business and technology requirements to help you plan for future growth and evolution, ensuring that your Webex Calling with Vox investment can expand and adapt as your company grows and changes</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-emotsmile m-auto text-primary"></i>
-            </div>
-            <h3>Happy employees and customers</h3>
-            <p class="lead mb-0">People love working for us! Happy employees translates into superior customer service and happy customers</p>
-          </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Happy employees and customers</h2>
+          <p class="lead mb-0">People love working for us! Happy employees translates into superior customer service and happy customers.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="blue text-white" style="padding: 7rem 1rem">
+
+  <section class="blue text-white" style="background:#0096bb url('img/phone.png') no-repeat right;background-size:contain;padding: 7rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
@@ -180,7 +176,7 @@
   <section class="call-to-action text-white text-center">
     <div class="container">
       <div class="row">
-        <div class="col-8 mx-auto">
+        <div class="col-md-8 col-sm-12 mx-auto">
           <h2 class="mb-4">Let Vox deliver the right cloud calling and collaboration platform tailored to your business needs</h2>
           <form>
             <div class="form-row">
