--- a/voxns/index.html
+++ b/voxns/index.html
@@ -159,7 +159,7 @@
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">What customers say about us&#8230;</h2>
+      <h2 class="mb-5">What customers say about&nbsp;us&#8230;</h2>
       <div class="row">
         <div class="col-12">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
@@ -177,7 +177,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
-          <h2 class="mb-4">Let Vox deliver the right cloud calling and collaboration platform tailored to your business needs</h2>
+          <h2 class="mb-4">Let Vox deliver the right cloud calling and collaboration platform tailored to your business&nbsp;needs</h2>
           <form>
             <div class="form-row">
               <div class="col-12">
