--- a/voxns/index-alpha.html
+++ b/voxns/index-alpha.html
@@ -19,7 +19,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="css/landing-page.css" rel="stylesheet">
+  <link href="css/landing-page-alpha.css" rel="stylesheet">
 
 </head>
 
@@ -37,18 +37,24 @@
   <header class="masthead text-white">
     <div class="container">
       <div class="row">
-        <div class="col-xl-6 col-lg-7 col-md-9 col-sm-12">
+        <div class="col-md-8 col-sm-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="120" height="120">
-          <h2 class="mt-2 mb-4">Webex Calling with&nbsp;Vox<br><span>Your complete phone system and collaboration solution in the&nbsp;cloud</span></h2>
-          <div class="video-container">
-            <iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe>
-          </div>
-          <!--<p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can&nbsp;trust.</p>
-          <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own&nbsp;pace.</p>-->
+          <h1 class="mt-2 mb-3">Webex Calling with&nbsp;Vox</h1>
+          <p class="lead">Webex Calling is your complete phone system and collaboration solution in the&nbsp;Cloud!</p>
+          <p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can&nbsp;trust.</p>
+          <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own&nbsp;pace.</p>
         </div>
       </div>
     </div>
   </header>
+
+  <section class="blue text-white">
+    <div class="container">
+      <div class="row" style="padding:0 15px">
+        <div class="video-container"><iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe></div>
+      </div>
+    </div>
+  </section>
 
   <section class="features-icons bg-light text-center">
     <div class="container">
