--- a/voxns/index.html
+++ b/voxns/index.html
@@ -11,29 +11,22 @@
 
   <title>Webex Calling with VOX Network Solutions</title>
 
-  <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-
-  <!-- Custom styles for this template -->
   <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
   <nav class="navbar navbar-light static-top">
     <div class="container">
       <div class="navbar-brand">VOX Network Solutions</div>
-      <a class="btn btn-primary round" href="tel:123-456-7890"><i class="fas fa-phone-alt"></i> 123.456.7890</a>
+      <a class="btn btn-primary call" href="tel:123-456-7890"><i class="fas fa-phone-alt"></i> 123.456.7890</a>
     </div>
   </nav>
 
-  <!-- Masthead -->
   <header class="masthead text-white">
     <div class="container">
       <div class="row">
@@ -49,6 +42,18 @@
       </div>
     </div>
   </header>
+
+<!--
+
+  <section class="bg-light text-center" style="padding: 7rem 1rem">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-12 mx-auto">
+          <p class="lead">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, and team collaboration on a monthly subscription model. It is easy to manage and powered by Cisco’s high security and reliability&nbsp;standards</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="features-icons bg-light text-center">
     <div class="container">
@@ -98,7 +103,35 @@
     </div>
   </section>
 
-  <section class="blue text-white text-center" style="background: #343a40 url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 7rem 1rem">
+-->
+
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h3>Deliver a unified experience to your users across all devices and&nbsp;locations</h3>
+          <p class="lead mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h3>Unlock the collaborative potential of your&nbsp;teams</h3>
+          <p class="lead mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h3>Delight your IT team with easy centralized&nbsp;management</h3>
+          <p class="lead mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="bg-blue text-white text-center" style="background: #343a40 url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 7rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
@@ -108,50 +141,21 @@
     </div>
   </section>
 
-  <!-- Image Showcases -->
-  <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Unique consultative approach</h2>
-          <p class="lead mb-0">We use Vox Lifecycle, our proprietary consultative framework, to find the right technology fit for your unique business needs and desired outcomes.</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Focused on your business’s evolution</h2>
-          <p class="lead mb-0">We audit your business and technology requirements to help you plan for future growth and evolution, ensuring that your Webex Calling with Vox investment can expand and adapt as your company grows and changes.</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Happy employees and customers</h2>
-          <p class="lead mb-0">People love working for us! Happy employees translates into superior customer service and happy customers.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <section class="blue text-white" style="background:#0096bb url('img/phone.png') no-repeat right;background-size:contain;padding: 7rem 1rem">
+  <section style="padding: 7rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h2 class="mb-3"><span class="o7">Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered.</h2>
+          <h2 class="mb-3"><span>Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered.</h2>
           <p class="lead">We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p class="lead">Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p class="lead">Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), as well as to third-party PBX legacy systems.</p>
-          <p class="mt-4"><button type="submit" class="btn btn-block btn-lg btn-light">Talk to an expert today!</button></p>
+          <p class="mt-4"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <section class="testimonials bg-blue text-center text-white">
     <div class="container">
       <h2 class="mb-5">What customers say about&nbsp;us&#8230;</h2>
       <div class="row">
@@ -166,7 +170,7 @@
     </div>
   </section>
 
-  <!-- Call to Action -->
+<!--
   <section class="call-to-action text-white text-center">
     <div class="container">
       <div class="row">
@@ -183,8 +187,8 @@
       </div>
     </div>
   </section>
+-->
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="row">
@@ -233,7 +237,6 @@
     </div>
   </footer>
 
-  <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
