--- a/voxns/index.html
+++ b/voxns/index.html
@@ -124,7 +124,7 @@
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h3>Delight your IT team with easy centralized&nbsp;management</h3>
+          <h3>Delight your IT team with easy centralized management</h3>
           <p class="lead mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
         </div>
       </div>
