--- a/voxns/index.html
+++ b/voxns/index.html
@@ -45,59 +45,11 @@
 
 <!--
 
-  <section class="bg-light text-center" style="padding: 7rem 1rem">
+  <section class="bg-light text-center" style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
           <p class="lead">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, and team collaboration on a monthly subscription model. It is easy to manage and powered by Cisco’s high security and reliability&nbsp;standards</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="hr"><span>Webex Cloud Calling</span></h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-globe m-auto text-primary"></i>
-            </div>
-            <h4>Unified Experience</h4>
-            <p class="mb-0">Seamless, unified calling and collaboration experience for all your users across all devices and locations</p>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-cloud-upload m-auto text-primary"></i>
-            </div>
-            <h4>Easy Management</h4>
-            <p class="mb-0">Easy to administer due to easy, centralized management in the cloud</p>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-wallet m-auto text-primary"></i>
-            </div>
-            <h4>Cost-Efficiency</h4>
-            <p class="mb-0">Cost-efficiency due to reduced total cost of ownership (TCO) and simple monthly per-user pricing that minimizes capital investment and supports scalability</p>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-lock m-auto text-primary"></i>
-            </div>
-            <h4>Highly Secure</h4>
-            <p class="mb-0">Backed by the high security standards of Cisco, a globally trusted brand</p>
-          </div>
         </div>
       </div>
     </div>
@@ -131,7 +83,7 @@
     </div>
   </section>
 
-  <section class="bg-blue text-white text-center" style="background: #343a40 url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 7rem 1rem">
+  <section class="bg-blue text-white text-center" style="background: #343a40 url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
@@ -141,30 +93,46 @@
     </div>
   </section>
 
-  <section style="padding: 7rem 1rem">
+  <section style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h2 class="mb-3"><span>Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered.</h2>
+          <h2 class="mb-3"><span>Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h2>
           <p class="lead">We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p class="lead">Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p class="lead">Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), as well as to third-party PBX legacy systems.</p>
-          <p class="mt-4"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
+          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h2 class="hr"><span>Why choose Vox?</span></h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <h4>Unique Consultative Approach</h4>
+          <p class="mb-0">We use a proprietary consultative framework to find the right technology fit for your unique business needs and desired outcomes</p>
+        </div>
+        <div class="col-lg-4">
+          <h4>Focused on your Business’s Evolution</h4>
+          <p class="mb-0">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes</p>
+        </div>
+        <div class="col-lg-4">
+          <h4>Business & Technical Collaboration Expertise</h4>
+          <p class="mb-0">We bring deep collaboration expertise from both business and technical perspectives</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="testimonials bg-blue text-center text-white">
+  <section class="bg-blue text-white" style="padding: 6rem 1rem">
     <div class="container">
-      <h2 class="mb-5">What customers say about&nbsp;us&#8230;</h2>
       <div class="row">
-        <div class="col-12">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <!--<img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">-->
-            <h5>Ian Gwinn, UCSF</h5>
-            <p class="font-weight-light mb-0">“Cindy from Vox Networks spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge at UCSF… Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the&nbsp;future.”</p>
-          </div>
+        <div class="col-md-8 col-sm-12">
+          <h2 class="mb-4">What customers say about&nbsp;us&#8230;</h2>
+          <p class="lead">“Cindy from Vox spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … Vox is lucky to have Cindy on their team!” <b>—Ian Gwinn, UCSF</b></p>
+          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
         </div>
       </div>
     </div>
